gitops/observability/jaeger/jaeger-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jaeger-httproute
  namespace: monitoring
spec:
  parentRefs:
    - name: yola-gateway
      namespace: istio-system
  hostnames:
    - "yola-istio-ingress.swedencentral.cloudapp.azure.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /jaeger
      backendRefs:
        - name: jaeger-query
          port: 80
